tests/ui/did_you_mean/issue-46836-identifier-not-instead-of-negation.stderr
error: unexpected `for_you` after identifier
  --> $DIR/issue-46836-identifier-not-instead-of-negation.rs:3:12
   |
LL |     if not for_you {
   |            ^^^^^^^
   |
help: use `!` to perform logical negation or bitwise not
   |
LL -     if not for_you {
LL +     if !for_you {
   |

error: unexpected `the_worst` after identifier
  --> $DIR/issue-46836-identifier-not-instead-of-negation.rs:11:15
   |
LL |     while not the_worst {
   |               ^^^^^^^^^
   |
help: use `!` to perform logical negation or bitwise not
   |
LL -     while not the_worst {
LL +     while !the_worst {
   |

error: unexpected `println` after identifier
  --> $DIR/issue-46836-identifier-not-instead-of-negation.rs:20:9
   |
LL |         println!("Then when?");
   |         ^^^^^^^
   |
help: use `!` to perform logical negation or bitwise not
   |
LL -     if not  // lack of braces is [sic]
LL +     if !// lack of braces is [sic]
   |

error: expected `{`, found `;`
  --> $DIR/issue-46836-identifier-not-instead-of-negation.rs:20:31
   |
LL |         println!("Then when?");
   |                               ^ expected `{`
   |
note: the `if` expression is missing a block after this condition
  --> $DIR/issue-46836-identifier-not-instead-of-negation.rs:19:8
   |
LL |       if not  // lack of braces is [sic]
   |  ________^
LL | |         println!("Then when?");
   | |______________________________^

error: unexpected `2` after identifier
  --> $DIR/issue-46836-identifier-not-instead-of-negation.rs:26:24
   |
LL |     let resource = not 2;
   |                        ^
   |
help: use `!` to perform bitwise not
   |
LL -     let resource = not 2;
LL +     let resource = !2;
   |

error: unexpected `be_smothered_out_before` after identifier
  --> $DIR/issue-46836-identifier-not-instead-of-negation.rs:32:27
   |
LL |     let young_souls = not be_smothered_out_before;
   |                           ^^^^^^^^^^^^^^^^^^^^^^^
   |
help: use `!` to perform logical negation or bitwise not
   |
LL -     let young_souls = not be_smothered_out_before;
LL +     let young_souls = !be_smothered_out_before;
   |

error: aborting due to 6 previous errors

